# Wine-Quality-Prediction-End-to-End-ML-Project

./: LICENSE  main.py  pyproject.toml  requirements.txt  setup.py  template.py
research/: trials.ipynb
