[project]
name = "wine-quality-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ensure==1.0.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-box==6.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.2",
    "types-pyyaml>=6.0.12.20260518",
]
